fix star rating spacing

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,11 +63,11 @@ h3 {
 
 h4 {
   color: var(--text-color);
-  font-size: 1em;
+  font-size: 1.1em;
 }
 p {
   color: var(--text-color);
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 .checked {
@@ -457,8 +457,6 @@ a:hover {
 }
 
 .detbox .name {
-  /* color: hsl(0, 0%, 81%); */
-  /* font-size: 0.9rem; */
   margin-bottom: 0.1rem;
   font-weight: 600;
 }
@@ -468,41 +466,19 @@ a:hover {
 }
 
 .detbox .designation {
-  /* color: hsl(0, 0%, 81%); */
   opacity: 50%;
   font-size: 0.8rem;
 }
 
-.detbox .designation.dark {
-  color: #49505A;
-}
-
 .review h4 {
   font-weight: 600;
-  /* margin-bottom: 0.8rem; */
-}
-
-.review.dark h4 {
-  color: #4B5258;
+  margin-bottom: 0.2rem;
 }
 
 .review p {
-  /* font-size: 0.95rem;
-  color: #F3DEFF; */
   font-weight: 500;
   opacity: 50%;
-  /* line-height: 1.5; */
 }
-
-.review.dark p {
-  color: #0e0e0e;
-}
-
-.review-stars {
-  display: flex;
-  align-items: center;
-}
-
 
 @media only screen and (max-width: 1000px) {
   .innerdiv {
